<resources>
    <string name="app_name">Ocelot</string>
    <string name="KEY_ID">VISTA_CON_ID</string>


    <string name="mi_primer_texto">hola</string>
    <string name="sapo_chemin">sapo chemi</string>

    <!-- String Serios -->
    <string name="usuarioLogin">Ingrese Usuario</string>
    <string name="claveLogin">Contraseña</string>
    <string name="tituloLogin">Iniciar Sesión</string>

    <string name="splashRegistrar">Registrarse</string>
    <string name="splashIniciarSesion">Iniciar Sesión</string>
    <string name="autentificarInicio">Autentificando</string>

    <!-- KEY -->
    <string name="COORDENADA_X">COORDENADA_X</string>
    <string name="COORDENADA_Y">COORDENADA_Y</string>
    <string name="title_activity_servicios">ServiciosActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mis_servicios">Mis Servicios</string>
    <string name="servicioCardEstado">Orden de Visita</string>
    <string name="servicioCardDescripcion">Jardineria</string>
    <string name="nombre_usuario">Patricia Freitez</string>

    <string name="detalle_servicio">detalle_servicio</string>
    <string name="splashCatalogo">Catalogo</string>
    <string name="servicioCardCosto">200$</string>
    <string name="servicioCardTitulo">Ttitulo</string>
    <string name="texto_catalogo_detalle">Eres\' daring \'Grigri Fortune\' swimsuit has the fit and coverage of a bikini in a one-piece silhouette. This fuchsia style is crafted from the label\'s sculpting peau douce fabric and has flattering cutouts through the torso and back. Wear yours with mirrored sunglasses on vacation.</string>

    <!-- Glory -->
    <string name="registarR">Registrar Reclamo</string>
    <string name="motivoR">Motivo del Reclamo</string>
    <string name="ordenEntrega">Orden de Entrega N°:</string>
    <string name="tipoR">Tipo de Reclamo:</string>
    <string name="detallesR">Detalles del Reclamo:</string>
    <string name="ordenE">678954</string>
    <string name="botonguardar">Guardar</string>
    <string name="botoncancelar">Cancelar</string>


    <string name="app_name1">orden de Visita</string>
    <string name="visitaN">Visita Nro:</string>
    <string name="visitaNro">VI-0005684F7-00</string>
    <string name="tecnico">Tecnico Asignado</string>
    <string name="nombretecnico">Jose Campos</string>
    <string name="lugar">Lugar</string>
    <string name="lugarvisita">Barquisimeto, Estado Lara Municipio Iribarren</string>
    <string name="telefonovisita">Telefono</string>
    <string name="telefono">0251-64849349</string>
    <string name="fechaV">Fecha de Visita</string>
    <string name="fecha">18/12/2017</string>
    <string name="botonconfirmar">Confirmar</string>
    <string name="botoncancelacion">Cancelar</string>

    <string name="app_name2">Presupuesto</string>
    <string name="membrete">Ocelot C.A.</string>
    <string name="informacion">Avenida Lara,Baquisimeto Estado Lara, 3001</string>
    <string name="informacion_telfono">0251-839658</string>
    <string name="presupuesto">Presupuesto Nro.:</string>
    <string name="nropresupuesto">P-00056-00</string>
    <string name="informacion2">Empresas A, C.A. Avenida Los Leones,Baquisimeto Estado Lara, 3001 Tlf.:0251839658</string>
    <string name="fechaP">Fecha Emision: </string>
    <string name="fechaE">28/03/2017 </string>
    <string name="servicioS">Servicio Solicitado </string>
    <string name="precioS">Precio Servicio </string>
    <string name="totalS">Total Servicio </string>
    <string name="jardineria">Jardineria</string>
    <string name="precio1000">10000</string>
    <string name="total1000">10000</string>
    <string name="subtotal">Sub Total: 10000</string>
    <string name="total">Total: 10000</string>
    <string name="botonconfirmarP">Confirmar</string>
    <string name="botonrechazarP">Rechazar</string>

    <string name="encuesta">Le Realizaremos una Serie de Preguntas para observar como califica usted Nuestra Aplicación Movil</string>
    <string name="tiempo">¿El Tiempo de Repuesta de la Aplicación Cumplio con sus Expectativas?</string>
    <string name="calidad">¿La información de los Servicios es Fiable?</string>
    <string name="calidad1">¿Las Transacciones de los Servicios se ejecuta de manera Correcta?</string>
    <string name="precio">¿Cree usted que el Precio de la Aplicación esta acorde al servicio Prestado?</string>
    <string name="comentarios">Comentarios...</string>
    <string name="botonterminar">Terminar</string>
    <string name="bienvenido">Bienvenido</string>

    <string name="detalleD">Detalle de los Diagnosticos</string>
    <string name="visita">Visita Nro:</string>
    <string name="visitaNroo">INV-000567F7-00</string>
    <string name="datosInmueble">Datos del Inmueble: Hacienda Santa Teresa 112 Street Avenu,1080 Miami, CT 445611 Telefono:(120)9000-4321</string>
    <string name="datosCliente">Datos del Cliente: Daniela Gomez 106 orge Avenu, 600/100 Chicago, VT32456 Telefono: (123)601-4590</string>
    <string name="detalleejecucion1">Romper Paredes Encargado: Juan Perez Fecha:12/11/2017 Estatus:Culminado</string>
    <string name="detalleejecucion2">Sustituir Tuberias Encargado: Juan Perez Fecha:13/11/20 Estatus:Culminado</string>
    <string name="detalleejecucion3">Acomodar Paredes Encargado: Juan Perez Estatus:Pendiente </string>
    <string name="catalogo_servicios">Catálogo de Servicios</string>
    <string name="promociones">Promociones</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>
