<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/colorBlanco"
    android:id="@+id/catalogo_contenedor"
    app:cardElevation="10dp">

    <LinearLayout
        android:background="@color/colorBlanco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotoCatalogo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/banner2" />

            <ProgressBar
                android:id="@+id/progressCatalogo"
                style="?android:attr/progressBarStyle"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_vertical"
            android:layout_marginLeft="@dimen/margen_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloCatalogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/servicioCardTitulo"
                android:textColor="@color/colorNegro"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/descripcionCatalogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/servicioCardDescripcion"
                android:textColor="@color/colorNegro"
                android:textSize="18dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                     android:id="@+id/costoCatalogo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="@string/servicioCardCosto"
                     android:textColor="@color/colorNegro"
                     android:textSize="18dp" />

                <TextView
                    style="@style/descuento"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/descuentoCatalogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=" -20%"
                    android:textColor="@color/colorNegro"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/precioServicio"
            android:id="@+id/fechaPromocion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="13/04/2017 al 13/06/2017"
            android:textColor="@color/colorNegro"
            android:textSize="18dp" />

    </LinearLayout>

</android.support.v7.widget.CardView>
